Fixed overflow-x and margin bottom to playlists

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -817,6 +817,7 @@ thead tr:nth-of-type(odd) {
 
 #playlist {
   overflow-x: auto;
+  margin-bottom: 100px;
 }
 
 #playlist table {
